# x-bot

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: core.yml  deploy.yml
src/: github.rs  lib.rs  main.rs  x_api.rs
