[package]
name = "x-bot"
version = "0.1.0"
edition = "2021"

#[dependencies]
#reqwest = { version = "0.11", features = ["blocking", "json"] }
#dotenv = "0.15.0"
#serde = { version = "1.0.214", features = ["derive"] }
#serde_json = "1.0.132"
#once_cell = "1.9.0"



[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
